--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "users-app",
-  "homepage": "https://taras-bilas.github.io/users-app",
+  "homepage": "https://taras-bilas.github.io/users",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -49,6 +49,7 @@
     "@testing-library/react": "^14.1.2",
     "axios-mock-adapter": "^1.22.0",
     "babel-jest": "^29.7.0",
+    "gh-pages": "^6.1.1",
     "jest": "^27.5.1",
     "redux-mock-store": "^1.5.4"
   }
